document additional color in CSS

--- a/pkgdown/extra.css
+++ b/pkgdown/extra.css
@@ -1,5 +1,10 @@
 /*
+Developed and maintained by Kevin Rue-Albrecht (@kevinrue)
+*/
+
+/*
 #0092ac   blue
+#00758a   darker blue (active menu)
 #c4d931   green (on blue)
 #87b13f   green (on white)
 */
