apply css to dropdown menu items and clicked buttons

--- a/pkgdown/extra.css
+++ b/pkgdown/extra.css
@@ -27,9 +27,21 @@ Developed and maintained by Kevin Rue-Albrecht (@kevinrue)
     background-color: #00758a;
 }
 
+.dropdown-menu>.active>a,
+.dropdown-menu>.active>a:hover,
+.dropdown-menu>.active>a:focus {
+    color: #c4d931;
+    background-color: #00758a;
+}
+
 .navbar-default .navbar-nav>li>a:hover,
 .navbar-default .navbar-nav>li>a:focus {
     color: #c4d931;
+}
+
+.dropdown-menu>li>a:hover {
+    color: #87b13f;
+    background-color: #ffffff;
 }
 
 .navbar-default .navbar-nav>li>a {
@@ -56,9 +68,15 @@ h3 {
 }
 
 .btn-copy-ex:hover {
-  color: #c4d931;
+  color: #ffffff;
   background-color: #00758a;
   border-color: #00758a;
+}
+
+.btn-copy-ex:active:focus {
+  color: #c4d931;
+  background-color: #00758a;
+  border-color: #0092ac;
 }
 
 p>.fa,
